--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+News for Abuse-XV 0.9 (unreleased)
+
+    - Change to CMake for easier cross-platform build support
+    - Builds under Windows now
+
 News for Abuse 0.8 (2011-05-09)
 
     - Support for the original music packs!
@@ -148,4 +153,3 @@ News for Abuse-SDL 0.2 (2000-12-13)
 News for Abuse-SDL 0.1 (2000-11-10)
 
     - First public release.
-
